# gut-of-imaging

./: .gitignore  .gitmodules  README.md  eeg.py  pyproject.toml  results.ipynb  scaling.py  scaling_bits.py
data_utils/: __init__.py
fnirs/: fnirs.ipynb  solver.py
fnirs/problems/: two_balls.py
guti/: core.py  data_utils.py  svd.py  viz.py
guti/meg/: MEG.ipynb
guti/modalities/: compute_leadfields.sh  compute_openmeeg_svds.py  head_mesh.py
guti/modalities/bem_model/: brain_sphere.tri  dipole_locations.txt  eit_dipole_locations.txt  scalp_sphere.tri  skull_sphere.tri
guti/modalities/ct/: ct.py  radon.py
guti/modalities/eeg/: eeg.py
guti/modalities/eeg_jax/: example.py
guti/modalities/eit/: example.py
guti/modalities/fnirs/: fnirs.ipynb  fnirs_2d.ipynb  fnirs_3d.py  medium.py  requirements.txt  sensor_geometry.py  solver.py
guti/modalities/fnirs_analytical/: main.py  requirements.txt  utils.py
guti/modalities/meg/: meg.py
guti/modalities/us/: analytical.py  pat.py  pat_analytical.py  pat_analytical_integrated.py  requirements.txt  us.py  utils.py
modalities/eeg/: eeg.py
modalities/meg/: MEG.ipynb  meg.py
results/: ecog_openmeeg_svd_spectrum.npz  eeg_openmeeg_svd_spectrum.npz  eeg_svd_spectrum.npz  eit_openmeeg_svd_spectrum.npz  eit_svd_spectrum.npz  fnirs_analytical_cw_svd_spectrum.npz  fnirs_cw_svd_spectrum.npz  ip_openmeeg_svd_spectrum.npz  meg_openmeeg_svd_spectrum.npz  meg_opm_svd_spectrum.npz  meg_squid_svd_spectrum.npz  pat_svd_spectrum.npz  us_analytical_svd_spectrum.npz  us_svd_spectrum.npz
(+10 files in other folders)
