[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data-utils"
version = "0.1.0"
description = "Data utility functions for gut-of-imaging project"
authors = ["Lev Chizhov", "Raffi Hotter", "Thomas Ribeiro", "Guillermo Valle"]
packages = [{ include = "guti/data_utils" }, { include = "guti" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed
