[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "guti"
version = "0.1.0"
description = "Gut-of-imaging project helper functions"
authors = ["Lev Chizhov", "Raffi Hotter", "Thomas Ribeiro", "Guillermo Valle"]
packages = [{ include = "guti" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed
